Made [YourEvents] mobile friends - made chips clicklable - fixed a lot of spacing issues - hacked away until it worked.

--- a/src/views/YourEvents/YourEvents.scss
+++ b/src/views/YourEvents/YourEvents.scss
@@ -48,7 +48,8 @@
 .yourevents__container-list {
   background-image: url("./Images/cream_dust.png");
   background-repeat: repeat;
-
+  animation: yourevents_fade-in 1500ms 500ms forwards;
+  animation-delay: 0ms;
 }
 
 .yourevents__container-scroll {
@@ -65,6 +66,9 @@
 
   margin-left: auto;
   margin-right: auto;
+
+  animation: yourevents_fade-in 1500ms 500ms forwards;
+  animation-delay: 0ms;
 }
 
 @media only screen and (max-width: $mobile-break) {
@@ -106,11 +110,6 @@
 
 .borderless {
   border-top: 0 none;
-}
-
-
-.red {
-  color: #7a0719;
 }
 
 
